--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,30 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+/* Basic two column layout with a results box in the bottom */
+/* Throw a border around all the divs for diagnostics */
+div {
+  border: 1px solid  #000;
+}
+div#stop_picker {
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
+  text-align: center;
+}
+div#choices {
+  display: inline-block;
+  width: 69%;
+  padding: 0 auto;
+  vertical-align: top;
+  text-align: center;
+}
+div#results {
+  width: 100%;
+  text-align: center;
+}
+div.lineToggle {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+}
