--- a/css/styles.css
+++ b/css/styles.css
@@ -8,21 +8,19 @@ html {
 }
 /* Basic two column layout */
 /* Throw a border around all the divs for diagnostics */
-div {
+/*div {
   border: 1px solid  #000;
-}
+}*/
 div#stopPicker {
   display: inline-block;
-  width: 30%;
+  width: 100%;
   vertical-align: top;
   text-align: center;
 }
 div#choices {
   display: inline-block;
-  width: 69%;
-  height: 100%;
-  vertical-align: top;
   text-align: center;
+  width: 100%;
 }
 div#results {
   width: 100%;
@@ -30,7 +28,7 @@ div#results {
   text-align: center;
   font-size: 40px;
 }
-div.lineToggle {
+div.lineLabel {
   display: inline-block;
   width: 50px;
   height: 50px;
@@ -38,15 +36,21 @@ div.lineToggle {
 }
 .lineN {
   background: #FEFD0A;
+  border: 1px solid  #000;
 }
 .lineL {
   background: #B2B2B2;
+  border: 1px solid  #000;
 }
 .line6 {
   background: #1DCB06;
+  border: 1px solid  #000;
 }
 .linemap {
   font-size: 20px;
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
 }
 div#stopPicker ul {
   padding: 0;
